assets/styles/index.scss
@import '~bootstrap/scss/bootstrap';
@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');

.show-games {
  display: none;
}

.row {
  margin: auto;
}

.ttt-board {
  display: none;
  margin-top: -180px;
  padding-bottom: 10px;
}

h1 {
  text-align: center;
  font-size: 70px;
}

h4 {
  margin-top: -100px;
  text-align: center;
}

#sign-up {
  width: 100%;
  // border: 2px solid black;
  text-align: center;

}

.show-change-password {
  font-size: 20px;
  display: none;
  border: none;
  background-color: #AFF3F6;
}

.show-change-password:hover {
  text-decoration: underline;
}

#message {
  margin-top: -120px;
  margin-bottom: 105px;
}

#has-account {
  margin-top: 75px;
  border: none;
  background-color: #AFF3F6;
}

#has-account:hover {
  text-decoration: underline;
}

#no-account {
  display: none;
  border: none;
  background-color: #AFF3F6;
}

#no-account:hover {
  text-decoration: underline;
}

#h4-sign-in {
  width: 100%;
  text-align: center;
  font-size: 25px;
}

#sign-in {
  margin-top: -100px;
  display: none;
  width: 100%;
  text-align: center;
}

#sign-out {
  display: none;
}

#change-password {
  margin-top: -60px;
  display: none;
}

.start-game {
  display: none;
}

body {
  background-color: #AFF3F6;
  font-family: 'VT323', monospace;
  margin: 30px;
  h1 h2 {
    margin: auto;
}
}

.box {
  align-items: center;
  background-color: #AFF3F6;
  display: flex;
  justify-content: center;
}

.box:hover {
  background-color: pink;
}

.vertical {
  border-left: 2px solid black;
  border-right: 2px solid black;
}

.horizontal {
  border-top: 2px solid black;
  border-bottom: 2px solid black;
}

// Reference: Shadey Salem, "tictactoe board (HTML/CSS)", Oct. 16, 2020,
// CodePen, <https://codepen.io/xunnn/pen/yEmMbm>

.row {
  height: 85px;
  width: 325px;
}

@media screen and (max-width: 766px) {
  .ttt-board {
    margin-top: -20px;
  }
}

